# koji-baseline

./: .gitignore  .tauri-release.toml  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-04-10-koji-v02-features.md  2026-04-10-koji-v03.md  2026-04-10-koji-v04-terminal-quality.md  2026-04-11-koji-batch-b-split-panes.md  (+6 more)
resources/: default-config.toml
resources/shell-integration/: bash-wrapper.sh  koji.bash  koji.fish  koji.zsh
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  monitor.rs  ollama.rs  openai_compat.rs  osc.rs  pty.rs  session_restore.rs  terminal.rs
src/agent/: agent.ts  markdown.ts  pane.ts  permissions.ts  tools.ts
src/animation/: effects.ts  waveform.ts
src/ascii/: boot.ts  idle.ts
src/blocks/: block-renderer.ts  error-assist.ts
src/commands/: handlers.ts  router.ts
src/config/: keybindings.ts  palette.ts
src/dashboard/: badge.ts  clock.ts  status-bar.ts
src/fonts/: fonts.ts
src/llm/: context.ts  onboarding.ts  panel.ts
src/overlay/: menu.ts  overlay.ts
src/panes/: pane-layout.ts
src/providers/: ollama.ts  openai-compat.ts  provider.ts
src/session/: restore.ts
src/styles/: wallace.css
src/tabs/: linked-art.ts  tab-drag.ts  tab-manager.ts  tab-session.ts
src/terminal/: ai-suggest.ts  autocomplete.ts  clickable.ts  dom-grid.ts  grid.ts  history-db.ts  mouse.ts  scrollback.ts  search.ts  selection.ts  semantic-search.ts  zones.ts
src/themes/: manager.ts  themes.ts
src/visor/: visor.ts
(+23 files in other folders)
